user: public page: fix letter spacing

--- a/app/assets/stylesheets/public_dashboard/public_dashboard.css.scss
+++ b/app/assets/stylesheets/public_dashboard/public_dashboard.css.scss
@@ -261,6 +261,7 @@ header {
         font-family: 'ProximaNova-Semibold', $text-fonts2;
         font-weight: 400;
         font-size:11px;
+        letter-spacing: 0;
       }
 
       a:hover {
